--- a/nginx.conf
+++ b/nginx.conf
@@ -13,13 +13,12 @@ events {
 
 # load modules compiled as Dynamic Shared Object (DSO)
 #
-#dso {
-#    load ngx_http_fastcgi_module.so;
-#    load ngx_http_rewrite_module.so;
-#}
+dso {
+    load ngx_http_vhost_traffic_status_module.so;
+}
 
 http {
-    vhost_traffic_status_zone;
+    
     include       mime.types;
     default_type  application/octet-stream;
 
