--- a/nginx.vh.default.conf
+++ b/nginx.vh.default.conf
@@ -7,14 +7,14 @@ server {
     #access_log  logs/host.access.log  main;
 
     location / {
-        root   html;
-        index  index.html index.htm;
+         vhost_traffic_status_display;
+            vhost_traffic_status_display_format html;
     }
 
     location /status {
             vhost_traffic_status_display;
             vhost_traffic_status_display_format html;
-        }
+    }
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
