--- a/nginx.vh.default.conf
+++ b/nginx.vh.default.conf
@@ -1,14 +1,14 @@
 server {
     listen       80;
     server_name  localhost;
-
+vhost_traffic_status_filter_by_host on;
   
 
     #access_log  logs/host.access.log  main;
 
     location / {
-         vhost_traffic_status_display;
-            vhost_traffic_status_display_format html;
+        root   html;
+        index  index.html index.htm;
     }
 
     location /status {
