--- a/nginx.conf
+++ b/nginx.conf
@@ -13,11 +13,12 @@ events {
 
 # load modules compiled as Dynamic Shared Object (DSO)
 #
-dso {
-    load ngx_http_vhost_traffic_status_module.so;
-}
+ dso {load ngx_http_vhost_traffic_status_module.so;}
 
 http {
+   
+   
+
     
     include       mime.types;
     default_type  application/octet-stream;
